# CipherVault

./: .gitignore  CipherVault.py  README.md  pyproject.toml  sample.txt
cipher_vault/: __init__.py  cli.py  core.py  gui.py  utils.py
scripts/: build_exe.py  launcher.py
tests/: test_core.py
